Fix autocompleter pill overflow behaviour (#2009)
* Fix autocompleter pill overflow behaviour

Pills in the autocompleter need to be able to overflow in 2 ways, with overflow scroll, and wrapping the pills.

This PR adds both, and can be toggled via the new wrapPills prop. On prop changes, the input will be scrolled back into view and given focus.

* Modify autocompleter to only scroll input into view if it should

should only scroll into view if wrapPills isn't true when a pill gets added, or the window gets resized

* Modify autocompleter to only scroll input into view if it should

should only scroll into view if wrapPills isn't true when a pill gets added, or the window gets resized

--- a/src/react/components/autocompleter/Autocompleter.scss
+++ b/src/react/components/autocompleter/Autocompleter.scss
@@ -27,6 +27,7 @@
 }
 
 .ac-input-wrapper {
+	flex: 1 0 50%;
 	padding: 8px 0.5em;
 	vertical-align: middle;
 	display: flex;
@@ -54,8 +55,14 @@
 	color: $xui-color-secondary-text;
 }
 
-.ac-toggled-wrapper {
-	position: static;
-	//grow to fill the rest of the space available.
-	flex-grow: 1;
+.ac-trigger {
+	display: flex;
+	overflow: auto;
+	max-width: 100%;
+}
+
+.ac-trigger-pillwrap {
+	display: flex;
+	flex-flow: row wrap;
+	justify-content: flex-start;
 }
